# radar-ppi

./: CMakeLists.txt  CMakePresets.json  README.MD  mingw-toolchain.cmake  udp_test.py
cmake/: radarConfig.cmake.in
core/: CMakelists.txt
core/include/: RadarContext.h  RadarGeometry.h  RadarTypes.h  radar_c_api.h
core/src/: RadarGeometry.cpp  radar_c_api.cpp
include/: helper.h  radar.h  target.h
main_app/: CMakelists.txt
main_app/include/: shader_util.h  text_vertex.h  udp_listener.h  window.h
main_app/src/: main.cpp  shader_util.cpp  udp_listener.cpp  window.cpp
opengl/: CMakelists.txt
opengl/include/: RadarRenderer.h  radar_gl_api.h
opengl/src/: RadarRenderer.cpp  radar_gl_api.cpp
radar_source/: mingw-toolchain.cmake
radar_source/include/: helper.h  radar.h  radarGeoType.h  radarGeometry.h  radarRenderer.h  shader.h  target.h
radar_source/src/: main.cpp  radar.cpp  radarGeometry.cpp  radarRenderer.cpp  target.cpp
src/: main.cpp  radar.cpp  shader.cpp  target.cpp
test_app/: CMakelists.txt
test_app/src/: main.cpp
